--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; /* Fonte moderna e legível */
-    background: linear-gradient(135deg, #72EDF2 10%, #5150D8 100%); /* Fundo gradiente vibrante */
+    background: linear-gradient(135deg, #8e72f2 10%, #3838aa 100%); /* Fundo gradiente vibrante */
     color: #333; /* Cor de texto padrão */
     display: flex;
     justify-content: center;
@@ -31,13 +31,13 @@ body {
 }
 
 h1 {
-    color: #5150D8; /* Cor do título principal */
+    color: #62da52; /* Cor do título principal */
     margin-bottom: 25px;
     font-size: 2.5em;
 }
 
 h2 {
-    color: #4A4A4A;
+    color: #8f8f8f;
     margin-bottom: 20px;
     font-size: 1.8em;
 }
